# my_arm_def

./: README.md  gnb_teste.joblib  lda_teste.joblib  lin_svm_teste.joblib  main.py  neigh_teste.joblib  requirements.txt  requirements.yml  teste_gazebo_launcher.py  teste_gazebo_launcher.ui  tree_teste.joblib
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_arm_def_bringup/share/my_arm_def_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_arm_def_bringup/share/my_arm_def_bringup/cmake/: my_arm_def_bringupConfig-version.cmake  my_arm_def_bringupConfig.cmake
install/my_arm_def_bringup/share/my_arm_def_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/my_arm_def_bringup/share/my_arm_def_bringup/launch/: my_arm_def.lauch.py  my_arm_definitive.lauch.py
install/my_arm_def_cpp_pkg/share/my_arm_def_cpp_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_arm_def_cpp_pkg/share/my_arm_def_cpp_pkg/cmake/: my_arm_def_cpp_pkgConfig.cmake
install/my_arm_def_interfaces/include/my_arm_def_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/my_arm_def_interfaces/include/my_arm_def_interfaces/srv/: send_position.hpp
install/my_arm_def_interfaces/share/my_arm_def_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_arm_def_interfaces/share/my_arm_def_interfaces/msg/: HardwareStatus.idl
install/my_arm_def_py_pkg/lib/my_arm_def_py_pkg/: arm_controller  capture_braco_pos  myo_raw  spawn_arm
install/my_arm_def_py_pkg/share/my_arm_def_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_arm_definitive_bringup/share/my_arm_definitive_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/my_arm_def_bringup/: CMakeLists.txt
src/my_arm_def_bringup/launch/: my_arm_definitive.lauch.py
src/my_arm_def_cpp_pkg/: CMakeLists.txt  package.xml
src/my_arm_def_cpp_pkg/config/: my_arm.yaml
src/my_arm_def_cpp_pkg/models/: braco_antebraco_garra.sdf
src/my_arm_def_cpp_pkg/src/: arm_controll.cpp  template.cpp
src/my_arm_def_cpp_pkg/worlds/: braco_com_mesa.world
src/my_arm_def_interfaces/: CMakeLists.txt  package.xml
src/my_arm_def_py_pkg/: package.xml  setup.cfg  setup.py
src/my_arm_def_py_pkg/my_arm_def_py_pkg/: arm_controller.py  capture_EMG_sample.py  capture_EMG_sample_2.py  capture_braco_pos.py  capture_braco_pos_with_menu.py  capture_simple_sample.py  mod_sig_emg.py  myo_raw.py  show_angles.py  show_angles.ui  spawn_arm.py  ui_show_angles.py
src/my_arm_definitive_bringup/: CMakeLists.txt
src/my_arm_definitive_bringup/config/: params.yaml
src/my_arm_definitive_bringup/launch/: my_arm_definitive.launch.py  number_app.launch.py
(+36 files in other folders)
